# baguette

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  logging_config.yaml  pyproject.toml
src/app/: config.py  loader.py  main.py
src/app/handlers/: __init__.py  add.py  help.py  settings.py  start.py
src/app/keyboards/: reply.py
src/app/middlewares/: reminder_dal.py
src/app/misc/: schemas.py  singleton.py  states.py
src/app/mongo/: __init__.py  dal.py
src/app/services/: admins_notify.py  duckling.py  timezone.py
src/app/text/: buttons.py  messages.py
