[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
pydantic = "^2.7.1"
PyYAML = "^6.0.1"
pydantic-settings = "^2.2.1"
colorlog = "^6.8.2"
httpx = "^0.27.0"
geopy = {extras = ["timezone"], version = "^2.4.1"}
motor = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "W", "N", "C", "B", "RUF100"]
ignore = [
    "B008",
    "D104",
    "D200",
    "D202",
    "D203",
    "D205",
    "D210",
    "D212",
    "D213",
    "D400",
    "D406",
    "D407",
    "D413",
    "D415",
    "N815",
    "W605",
]
exclude = ["versions"]
